Group add was missing the slash at the end so wasn't continuing the docker run command

--- a/templates/service.j2
+++ b/templates/service.j2
@@ -43,7 +43,7 @@ ExecStart=/usr/bin/docker run \
   --device "{{ device }}" \
 {% endfor %}
 {% if "groups" in service %}
-  --group-add {{ service['groups'] | join(',') }}
+  --group-add {{ service['groups'] | join(',') }} \
 {% endif %}
 {% for device in service['devices'] | default([]) %}
   --device "{{ device }}" \
